--- a/src/theme/colors.scss
+++ b/src/theme/colors.scss
@@ -1,1 +1,7 @@
 /* Detaulf colors for the site */
+
+$black: #000000;
+$white: #ffffff;
+$grey: #333333;
+$light-grey: #c1c1c1;
+$highlighter: #ffff00;
